<?xml version="1.0"?>
<package>
  <name>path_manager_plugins</name>
  <version>0.0.0</version>
  <description>The uwb_rviz package</description>

<maintainer email="maintainer@5drobotics.com">5D</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
 
   
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
